# task-06---threads-TamariIv

./: CMakeLists.txt  README.md  Task06.cpp
